# music-player

./: .eslintrc.json  .gitignore  .prettierrc.json  README.md  index.html  package.json  tsconfig.json  vite.config.ts
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/assets/: local_song_list.csv
src-tauri/src/: main.rs
src-tauri/src/api/: mod.rs
src-tauri/src/dialog/: mod.rs
src-tauri/src/file/: file_error.rs  mod.rs
src-tauri/src/network/: kugou.rs  mod.rs  song_struct.rs
src-tauri/src/song/: mod.rs  song_error.rs
src-tauri/src/window/: mod.rs
src/assets/styles/: global.scss  styles.css  vars.scss
src/components/TextScroll/: index.vue
src/components/footBar/: index.vue
src/components/footBar/component/: play.vue  soundQuality.vue
src/components/menuItem/: index.vue
src/components/navBar/: index.vue
src/components/navBar/components/: search.vue
src/const/: event.ts  index.ts
src/enum/: index.ts
src/interface/: event.ts  index.ts
src/layout/: main.vue
src/router/: index.ts
src/service/: api.ts  index.ts
src/store/: index.ts
src/utils/: eventHub.ts  index.ts  play.ts  window.ts
src/views/index/: index.vue
src/views/index/component/: menu.vue
src/views/like/: index.vue
src/views/local/: index.vue
src/views/local/components/: songTable.vue
src/views/login/: index.vue
src/views/mv/: index.vue
src/views/mv/components/: controls.vue  mvDrawer.vue  mvItem.vue
src/views/search/: index.vue
src/views/search/components/: kuGou.vue  songTable.vue
