[package]
name = "tauri-study"
version = "0.0.0"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5.2", features = [ "window-all", "fs-all", "dialog-all"] }
serde_json = "1.0.108"
serde = "1.0.192"
csv = "1.3.0"
mp3-duration = "0.1.10"
hound = "3.5.1"
claxon = "0.4.3"
uuid = {version = "1.6.1", features = ["v4", "serde"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
